--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ p {
 .about {
     float: left;
     padding: 45px 25px 5px 300px;
-    border-right: solid #dddddd;
+    border-right: 2px solid #dddddd;
 }
 .portfolio {
     float: left;
@@ -36,7 +36,7 @@ p {
 .contact {
     float: left;
     padding: 45px 25px 5px 10px;
-    border-left: solid #dddddd;
+    border-left: 2px solid #dddddd;
 }
 .container {
     background: url(img_intersection.png);
@@ -46,12 +46,35 @@ p {
 .h2 {
     clear: both;
     color: #4aaaa5;
+    margin: 0px 0px 15px 50px;
 }
 .profile {
-    height: 250px;
+    height: 275px;
     width: 250px;
     float: left;
     padding: 5px;
+}
+form {
+    color: #777777;
+    font-size: 18px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin: 0px 0px 0px 50px;
+}
+input {
+    width: 70%;
+    padding: 12px 20px;
+    margin: 8px 0;
+}
+.button {
+    background-color: #4aaaa5;
+    border: none;
+    color: #ffffff;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 25px 25px 200px 50px;
 }
 .footer {
     clear: both;
@@ -59,4 +82,5 @@ p {
     border-top: 8px solid #4aaaa5;
     padding: 5px;
     background-size: 25px;
+    text-align: center;
 }
