--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,22 @@ body {
 h1 {
     font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
+a {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #777777;
+    font-size: 20px;
+    padding: 5px;
+}
 p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
     font-size: 20px;
     padding: 5px;
+}
+.container {
+    width: 100%;
+    height: 150px;
+    background-color: #ffffff;
 }
 .header {
     color: #ffffff;
@@ -51,6 +62,7 @@ p {
     clear: both;
     color: #4aaaa5;
     margin: 0px 0px 15px 50px;
+    border-bottom: solid 4px #dddddd;
 }
 .profile {
     height: 275px;
@@ -62,7 +74,7 @@ form {
     color: #777777;
     font-size: 18px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    margin: 0px 0px 0px 50px;
+    margin: 0px 0px 0px 100px;
 }
 input {
     width: 70%;
@@ -78,14 +90,24 @@ input {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 25px 25px 200px 50px;
+    margin: 25px 25px 200px 100px;
 }
 .content {
     float: left;
     background-color: #ffffff;
     padding: 50px;
-    margin: 25px 25px 25px 50px;
+    margin: 25px 25px 25px 200px;
     border: solid 2px #dddddd;
+    font-size: 24px;
+}
+.project1 {
+    padding: 25px;
+}
+.project2 {
+    padding: 25px;
+}
+.project3 {
+    padding: 25px;
 }
 .footer {
     clear: both;
@@ -94,4 +116,5 @@ input {
     padding: 5px;
     background-size: 25px;
     text-align: center;
+    color: #777777;
 }
