--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ p {
     width: 100%;
     height: 150px;
     background-color: #ffffff;
+    border-bottom: solid 2px #dddddd;
 }
 .header {
     color: #ffffff;
@@ -97,6 +98,14 @@ input {
     background-color: #ffffff;
     padding: 50px;
     margin: 25px 25px 25px 200px;
+    border: solid 2px #dddddd;
+    font-size: 24px;
+}
+.basic {
+    float: left;
+    background-color: #ffffff;
+    padding: 50px;
+    margin: 50px;
     border: solid 2px #dddddd;
     font-size: 24px;
 }
